// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmitButton/> Render load 1`] = `
<button
  class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  disabled=""
>
  <span
    aria-hidden="true"
    class="spinner-border spinner-border-sm"
    role="status"
  />
   
   
   
  Load settings
</button>
`;

exports[`<SubmitButton/> Render ready 1`] = `
<button
  class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
>
   
   
  Save
</button>
`;

exports[`<SubmitButton/> Render update 1`] = `
<button
  class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  disabled=""
>
  <span
    aria-hidden="true"
    class="spinner-border spinner-border-sm"
    role="status"
  />
   
   
   
  Updating
</button>
`;

exports[`<SubmitButton/> Render update 2`] = `
<button
  class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  disabled=""
>
  <span
    aria-hidden="true"
    class="spinner-border spinner-border-sm"
    role="status"
  />
   
   
   
  Restarting after %d sec.
</button>
`;
